tests/compile_fail/round_on_l_conn.stderr
error[E0277]: the trait bound `Conn<i32, i32>: ConnK<i32, i32>` is not satisfied
  --> tests/compile_fail/round_on_l_conn.rs:11:24
   |
11 |     let _: i32 = round(&L_CONN, 0_i32);
   |                  ----- ^^^^^^^ the trait `ConnR<i32, i32>` is not implemented for `Conn<i32, i32>`
   |                  |
   |                  required by a bound introduced by this call
   |
   = help: the trait `ConnR<i32, i32>` is not implemented for `Conn<i32, i32, L>`
           but it is implemented for `Conn<i32, i32, R>`
   = help: for that trait implementation, expected `R`, found `L`
   = note: required for `Conn<i32, i32>` to implement `ConnK<i32, i32>`
note: required by a bound in `connections::round`
  --> src/conn.rs
   |
   | pub fn round<T, A, B>(t: &T, x: A) -> B
   |        ----- required by a bound in this function
   | where
   |     T: ConnK<A, B>,
   |        ^^^^^^^^^^^ required by this bound in `round`
